--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ q# Prerequisites
 *.i*86
 *.x86_64
 *.hex
+*.mac
 
 # Debug files
 *.dSYM/
@@ -50,6 +51,7 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+*.dSYM
 
 .vscode/*
 .vscode/
@@ -61,3 +63,4 @@ dkms.conf
 #Write-ups
 *.docx
 *.doc
+
